# furkan

./: .gitignore  CMakeLists.txt  README.md  furkan.cpp  furkan.desktop  furkan.h  furkan.pro  furkan.ui  images.qrc  main.cpp
debian/: changelog  control  copyright  furkan.install  rules
images/: License.txt
